<resources>
    <string name="app_name">Appointed</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ramiro Vacovich</string>
    <string name="nav_header_subtitle">ramirovacovich@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Nuevo turno</string>
    <string name="menu_slideshow">Mi usuario</string>
    <string name="menu_log_out">Cerrar sesión</string>
    <string name="menu_my_calendar">Mi Agenda</string>
    <string name="menu_presets">Presets</string>
    <string name="menu_user">Mi Usuario</string>
    <string name="action_settings_doctor">Ingresar como paciente</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
