<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/doctor_nav_home">

    <fragment
        android:id="@+id/doctor_nav_home"
        android:name="com.example.appointed.doctor.ui_doctor.doctor_home.DoctorHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_doctor_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.appointed.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_calendar"
        android:name="com.example.appointed.doctor.ui_doctor.doctor_calendar.DoctorsCalendarFragment"
        android:label="@string/menu_my_calendar"
        tools:layout="@layout/fragment_my_calendar" />

    <fragment
        android:id="@+id/nav_presets"
        android:name="com.example.appointed.doctor.ui_doctor.presets.PresetsFragment"
        android:label="@string/menu_presets"
        tools:layout="@layout/fragment_presets" />
    <fragment
        android:id="@+id/nav_doctor_user"
        android:name="com.example.appointed.doctor.ui_doctor.doctor_user.DoctorUserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/doctor_user_fragment" />
</navigation>